$Id$


v0.91.8		26-Apr-2007

	upgrade:
		Make sure mbtask is restarted.

	mbnewusr:
		Fixed loading default language for new user.

	mbtask:
		Added SNMP MIB counters and added set commands to increase
		these new counters.


v0.91.7		07-Mar-2007 - 26-Apr-2007

	mbselib:
		If find_rfc_charset doesn't find a valid characterset we log a
		warning instead of an error.
		Fixed some charset names using IANA information.
		Removed duplicate table column.

	mbfido:
		In rfc2ftn if we cannot find the incoming charset from the
		standard table we will fall back to the charset in the
		Content-type: header and try to initialize iconv with that
		value.
		For debug help to me, the headers Content-Type and
		Content-Transfer-Encoding are temporary stored in the fido
		message as kludges.

	mbindex:
		When the first Zone entry is missing in the nodelist, mbindex
		aborts with a fatal error and doesn't replace the nodelist
		index.
		Keep the latest 4 instead of 2 nodelists in the nodelist
		directory to allow a few weeks for recovery.

	mbdiff:
		Wrote a lf instead of eof character as last character in the
		new nodelist.
		Fixed CRC error made by previous change.

	mbnntp:
		Suppress logging of passwords.


v0.91.6		05-Mar-2007 - 07-Mar-2007

	upgrade:
		This upgrade is not needed if you are happy with the current
		symbolic links in the download fileareas.
		You need to remove all existing symbolic links with paths, and
		recreate the symbolic links without pathnames do:

		mbse$ cd /opt/mbse/ftp
		mbse$ find pub -type l -exec rm '{}' \;
		mbse$ mbfile check
		
	mbfido:
		The add file function now creates links without pathnames.

	mbfile:
		The check command now repairs filenames without using absolute
		pathnames.
		The adopt, import and move functions now make links without
		path.

	mbsebbs:
		Uploaded files now have symlinks without pathnames.


v0.91.5		18-Feb-2007 - 05-Mar-2007

		With this version de default internal character encoding is